--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,47 @@
-/* Global Styles */
+/* Styles globaux */
 body {
     background-color: #FFD700;
-    font-family: 'Roboto', sans-serif; /* Using Roboto font */
-    font-weight: 900;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
     margin: 0;
     padding: 0;
 }
 
-/* Styles for main text */
+/* Styles pour le texte principal */
 .main-text {
-    font-size: clamp(4rem, 4rem + ((1vw - 0.2rem) * 10.909), 10rem);
-    line-height: 0.70;
-    letter-spacing: -5px;
+    font-size: clamp(2rem, 2rem + ((1vw - 0.2rem) * 5.4545), 5rem);
+    line-height: 1.2;
+    letter-spacing: -2px;
     text-align: left;
     padding-left: 3%;
     margin-top: 3%;
     white-space: nowrap;
 }
 
-/* Styles for social media icons */
+/* Styles pour les liens de médias sociaux */
 .social-icons {
     display: flex;
-    justify-content: flex-start;
+    flex-direction: column; /* Change la disposition pour une colonne en mode portrait */
+    align-items: flex-start; /* Alignement des liens à gauche */
     padding-left: 3%;
     margin-top: 3%;
     margin-bottom: 10%;
 }
 
 .social-icons a {
-    text-decoration: none;
-    margin-right: 20px;
+    color: black; /* Couleur du texte des liens en noir */
+    text-decoration: none; /* Retire le soulignement */
+    text-transform: uppercase; /* Texte en majuscules */
+    margin-bottom: 10px; /* Espace entre les liens */
 }
 
-.social-icons img {
-    width: 30px;
-    height: 30px;
+@media (min-width: 600px) {
+    .social-icons {
+        flex-direction: row; /* En mode paysage, les liens sont affichés en ligne */
+        flex-wrap: wrap; /* Permet aux éléments de passer à la ligne si nécessaire */
+    }
+    .social-icons a {
+        margin-right: 20px; /* Espace à droite pour le mode paysage */
+        margin-bottom: 0; /* Réinitialise l'espace en bas pour le mode paysage */
+    }
 }
